--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         </p>
                         <p style="font-family:Helvetica">
                             My interests primarily lie in the field of 3D Computer Vision and Embodied AI.
-                            In particular, I tackle the challenges in <i>scene reconstruction, content generation, layout understanding, panoptic segmentation, SLAM, depth estimation and multimodal foundation models</i>.
+                            In particular, I tackle the challenges in <i>3D reconstruction, content generation, scene understanding, semantic segmentation, SLAM, depth estimation and multimodal foundation models</i>.
                         </p>
                     </td>
                 </tr>
@@ -153,6 +153,66 @@
         </div>
 
         <h1 style="font-size:24px">Selected Publications (<a href="https://scholar.google.com/citations?user=EBQuyRAAAAAJ&hl=en">Full List</a>)</h1>
+
+        <table class="imgtable">
+            <tbody>
+                <tr>
+                    <td width="21%<article>">
+                        <img src="./figures/cvpr25_activegamer.jpg" width="100%<article>">
+                    </td>
+                    <td align="left">
+                        <ul>
+                            <li>
+                                <h3 style="font-family:Helvetica">
+                                    <b>
+                                        ActiveGAMER: Active GAussian Mapping through Efficient Rendering
+                                    </b>
+                                </h3>
+                                <p style="font-family:Helvetica">
+                                    Liyan Chen<sup>*</sup>, Huangying Zhan<sup>*</sup>, Kevin Chen, Xiangyu Xu, <b>Qingan Yan</b>, Changjiang Cai, Yi Xu
+                                </p>
+                                <p style="font-family:Helvetica">
+                                    <i>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2025.</i>
+                                </p>
+                                <p style="padding-top:10px">
+                                    [<a href="https://arxiv.org/abs/2501.06897"><u>Paper (arXiv)</u></a>]
+                                </p>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+        <table class="imgtable">
+            <tbody>
+                <tr>
+                    <td width="21%<article>">
+                        <img src="./figures/icra25_planarnerf.jpg" width="100%<article>">
+                    </td>
+                    <td align="left">
+                        <ul>
+                            <li>
+                                <h3 style="font-family:Helvetica">
+                                    <b>
+                                        PlanarNeRF: Online Learning of Planar Primitives with Neural Radiance Fields
+                                    </b>
+                                </h3>
+                                <p style="font-family:Helvetica">
+                                    Zheng Chen, <b>Qingan Yan</b>, Huangying Zhan, Changjiang Cai, Xiangyu Xu, Yuzhong Huang, Weihan Wang, Ziyue Feng, Yi Xu, Lantao Liu
+                                </p>
+                                <p style="font-family:Helvetica">
+                                    <i>IEEE International Conference on Robotics & Automation <b>(ICRA)</b>, 2025.</i>
+                                </p>
+                                <p style="padding-top:10px">
+                                    [<a href="https://arxiv.org/abs/2401.00871"><u>Paper (arXiv)</u></a>]
+                                </p>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
 
         <table class="imgtable">
             <tbody>
