--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
                 <tr>
                     <td>
                         <p style="font-family:Helvetica">
-                            I am currently a Tech Lead Manager at <a href="https://www.goertek.com/en/">Goertek</a> Alpha Labs in Santa Clara, CA, where I direct the research and design of cutting-edge visual perception AI algorithms.
+                            I am currently a Tech Lead Manager at <a href="https://www.goertek.com/en/">Goertek</a> Alpha Labs in Santa Clara, CA, where I direct the research and design of multimodal AI algorithms
+                            , specifically in environment perception and interaction perception.
                             Prior to this, I served as a Staff Research Scientist and Tech Lead in the <a href="https://oppo-us-research.github.io/OPPO_US_Research_Center_XR_Team/">AI-Wearable Devices Department</a> at <a href="https://www.innopeaktech.com/">InnoPeak Technology</a> (a.k.a., OPPO US Research Center) in Palo Alto, CA, 
                             where I led a team focused on developing 3D environment perception and large language model (LLM)-powered user-device interaction algorithms.
                             From 2017 to 2021, I worked as a Senior Research Scientist at <a href="https://corporate.jd.com/">JD.com American Technologies</a> in Mountain View, CA, specializing in 3D vision algorithm development.
@@ -82,6 +83,9 @@
                     <tr>
                         <td align="left">
                             <ul>
+                                <li>
+                                    <p style="font-family:Helvetica"><b>[Jul 28, 2025]:</b> <i> A paper is accepted to ISMAR 2025.</i></p>
+                                </li>
                                 <li>
                                     <p style="font-family:Helvetica"><b>[Feb 26, 2025]:</b> <i> A paper is accepted to CVPR 2025.</i></p>
                                 </li>
@@ -153,6 +157,36 @@
         </div>
 
         <h1 style="font-size:24px">Selected Publications (<a href="https://scholar.google.com/citations?user=EBQuyRAAAAAJ&hl=en">Full List</a>)</h1>
+        
+        <table class="imgtable">
+            <tbody>
+                <tr>
+                    <td width="21%<article>">
+                        <img src="./figures/ismar25_crafting.jpg" width="100%<article>">
+                    </td>
+                    <td align="left">
+                        <ul>
+                            <li>
+                                <h3 style="font-family:Helvetica">
+                                    <b>
+                                        Crafting Dynamic Virtual Activities with Advanced Multimodal Models
+                                    </b>
+                                </h3>
+                                <p style="font-family:Helvetica">
+                                    Changyang Li, <b>Qingan Yan</b>, Minyoung Kim, Zhan Li, Yi Xu, Lap-Fai Yu
+                                </p>
+                                <p style="font-family:Helvetica">
+                                    <i>IEEE International Symposium on Mixed and Augmented Reality <b>(ISMAR)</b>, 2025.</i>
+                                </p>
+                                <p style="padding-top:10px">
+                                    [<a href="https://arxiv.org/abs/2406.17582"><u>Paper (arXiv)</u></a>]
+                                </p>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
 
         <table class="imgtable">
             <tbody>
@@ -175,7 +209,9 @@
                                     <i>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2025.</i>
                                 </p>
                                 <p style="padding-top:10px">
-                                    [<a href="https://arxiv.org/abs/2501.06897"><u>Paper (arXiv)</u></a>]
+                                    [<a href="https://arxiv.org/abs/2501.06897"><u>Paper (arXiv)</u></a>]&nbsp;
+                                    [<a href="https://oppo-us-research.github.io/ActiveGAMER-website/"><u>Project Page</u></a>]&nbsp;
+                                    [<a href="https://github.com/oppo-us-research/ActiveGAMER"><u>Code</u></a>]
                                 </p>
                             </li>
                         </ul>
@@ -985,7 +1021,7 @@
 
         <div id="footer">
             <div id="footer-text">
-                <p style="font-family:Helvetica">Last updated on Jun 03, 2025 by Qingan Yan.</p>
+                <p style="font-family:Helvetica">Last updated on Nov 17, 2025 by Qingan Yan.</p>
             </div>
         </div>
     </div>
