--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             <span style="font-family:Helvetica">
                                 <b>
                                     Tech Lead Manager 
-                                    <br>Goertek Alpha Labs
+                                    <!--<br>Goertek Alpha Labs-->
                                     <br>
                                 </b>
                             </span>
@@ -36,10 +36,12 @@
                         <p>
                             <span style="font-family:Helvetica">
                                 <b>Email:</b> yanqinganssg <i>at</i> gmail <i>dot</i> com<br>
+                                <!--
                                 <b>Office:</b> 5451 Great America Pkwy #301, Santa Clara, CA 95054<br>
                                 <b>Links:</b> <a href="https://github.com/yanqingan">GitHub</a> |
                                 <a href="https://www.linkedin.com/in/yanqingan">LinkedIn</a> |
                                 <a href="https://scholar.google.com/citations?user=EBQuyRAAAAAJ&hl=en">Google Scholar</a>
+                                -->
                                 <br>
                             </span>
                         </p>
@@ -59,8 +61,8 @@
                 <tr>
                     <td>
                         <p style="font-family:Helvetica">
-                            I am currently a Tech Lead Manager at <a href="https://www.goertek.com/en/">Goertek</a> Alpha Labs in Santa Clara, CA, where I direct the research and design of multimodal AI algorithms
-                            , specifically in environment perception and interaction perception.
+                            I am currently a Tech Lead Manager<!-- at <a href="https://www.goertek.com/en/">Goertek</a> Alpha Labs in Santa Clara, CA, where I direct the research and design of multimodal AI algorithms
+                            -->, specifically in environment perception and interaction perception.
                             Prior to this, I served as a Staff Research Scientist and Tech Lead in the <a href="https://oppo-us-research.github.io/OPPO_US_Research_Center_XR_Team/">AI-Wearable Devices Department</a> at <a href="https://www.innopeaktech.com/">InnoPeak Technology</a> (a.k.a., OPPO US Research Center) in Palo Alto, CA, 
                             where I led a team focused on developing 3D environment perception and large language model (LLM)-powered user-device interaction algorithms.
                             From 2017 to 2021, I worked as a Senior Research Scientist at <a href="https://corporate.jd.com/">JD.com American Technologies</a> in Mountain View, CA, specializing in 3D vision algorithm development.
@@ -92,9 +94,11 @@
                                 <li>
                                     <p style="font-family:Helvetica"><b>[Jan 27, 2025]:</b> <i> A paper is accepted to ICRA 2025.</i></p>
                                 </li>
+                                <!--
                                 <li>
                                     <p style="font-family:Helvetica"><b>[Dec 09, 2024]:</b> <i> Start a new journey at Goertek.</i></p>
                                 </li>
+                                -->
                                 <li>
                                     <p style="font-family:Helvetica"><b>[Feb 26, 2024]:</b> <i> A paper is accepted to CVPR 2024.</i></p>
                                 </li>
@@ -158,6 +162,7 @@
 
         <h1 style="font-size:24px">Selected Publications (<a href="https://scholar.google.com/citations?user=EBQuyRAAAAAJ&hl=en">Full List</a>)</h1>
         
+        <!--
         <table class="imgtable">
             <tbody>
                 <tr>
@@ -187,7 +192,8 @@
                 </tr>
             </tbody>
         </table>
-
+        -->
+        
         <table class="imgtable">
             <tbody>
                 <tr>
